<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:src="@drawable/icon"
        android:contentDescription="@string/icon"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:padding="24dp"
        android:textSize="24sp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/description"
        android:gravity="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="12dp"
        android:text="@string/ok"
        android:textColor="#FFFFFF"
        android:background="#8080FF"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="12dp"
        android:text="@string/setting"
        android:textAllCaps="false"
        android:textColor="#808080"
        android:background="#00FFFFFF"
        style="@style/Widget.AppCompat.Button.Borderless"/>
</LinearLayout>